[package]
name = "kochnet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
serde = {version = "1.0.137", features=["derive"]}
chrono = "0.4"
plotters = "0.3.1"
rand = "0.8.5"
log = "0.4.16"
simple-logging = "2.0.2"
regex = "1.5.5"
lazy_static = "1.4.0"
serde_json = "1.0.81"
ctrlc = "3.2.2"
rayon = "1.5.2"